<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>Easterlyn</artifactId>

  <build>

    <finalName>${project.name}</finalName>

    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>build-helper-maven-plugin</artifactId>
          <executions>
            <execution>
              <configuration>
                <locale>en_US</locale>
                <name>timestamp</name>
                <pattern>MM/dd/yyyy@HH:mm</pattern>
                <timeZone>America/New_York</timeZone>
              </configuration>
              <goals>
                <goal>timestamp-property</goal>
              </goals>
              <id>timestamp-property</id>
            </execution>
          </executions>
          <groupId>org.codehaus.mojo</groupId>
          <version>3.3.0</version>
        </plugin>

        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>2.22.6</version>
          <configuration>
            <java>
              <googleJavaFormat>
                <version>1.9</version>
                <style>GOOGLE</style>
              </googleJavaFormat>
            </java>
          </configuration>
        </plugin>

        <plugin>
          <artifactId>maven-shade-plugin</artifactId>
          <executions>
            <execution>
              <goals>
                <goal>shade</goal>
              </goals>
              <phase>package</phase>
            </execution>
          </executions>
          <groupId>org.apache.maven.plugins</groupId>
          <version>3.3.0</version>
        </plugin>

        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <source>17</source>
            <target>17</target>
            <!--<forceJavacCompilerUse>true</forceJavacCompilerUse>-->
          </configuration>
          <groupId>org.apache.maven.plugins</groupId>
          <version>3.10.1</version>
        </plugin>

        <plugin>
          <groupId>net.md-5</groupId>
          <artifactId>specialsource-maven-plugin</artifactId>
          <version>1.2.4</version>
        </plugin>

        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <groupId>org.apache.maven.plugins</groupId>
          <version>3.0.0-M7</version>
        </plugin>

        <plugin>
          <artifactId>copy-maven-plugin</artifactId>
          <executions>
            <execution>
              <configuration>
                <resources>
                  <resource>
                    <directory>${project.build.directory}</directory>
                    <excludes>
                      <exclude>original-*.jar</exclude>
                    </excludes>
                    <id>copy</id>
                    <includes>
                      <include>*.jar</include>
                    </includes>
                    <paths>
                      <path>
                        <from>${project.build.directory}</from>
                        <!--
                         ~ Property should be defined in build command, i.e.:
                         ~ mvn clean package -Dproject.build.finaldir=/minecraft/testserver/plugins/
                        -->
                        <!--suppress UnresolvedMavenProperty -->
                        <to>${project.build.finaldir}</to>
                      </path>
                    </paths>
                    <replaceExisting>true</replaceExisting>
                    <workOnFullPath>true</workOnFullPath>
                  </resource>
                </resources>
              </configuration>
              <goals>
                <goal>copy</goal>
              </goals>
              <phase>package</phase>
            </execution>
          </executions>
          <groupId>ch.mfrey.maven.plugin</groupId>
          <version>1.0.0</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <artifactId>bungeecord-chat</artifactId>
        <groupId>net.md-5</groupId>
        <scope>provided</scope>
        <version>1.16-R0.4</version>
      </dependency>
      <!-- Module core uses server jar, also needs to specify API for dependency resolution order. -->
      <!--suppress MavenDuplicateDependenciesInspection -->
      <dependency>
        <artifactId>spigot-api</artifactId>
        <groupId>org.spigotmc</groupId>
        <scope>provided</scope>
        <version>${spigot.version}${spigot.revision}</version>
      </dependency>
      <dependency>
        <artifactId>spigot</artifactId>
        <classifier>remapped-mojang</classifier>
        <groupId>org.spigotmc</groupId>
        <scope>provided</scope>
        <version>${spigot.version}${spigot.revision}</version>
      </dependency>
      <dependency>
        <artifactId>acf-paper</artifactId>
        <groupId>co.aikar</groupId>
        <scope>provided</scope>
        <version>0.5.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <artifactId>annotations</artifactId>
        <groupId>org.jetbrains</groupId>
        <scope>provided</scope>
        <version>23.0.0</version>
      </dependency>
      <dependency>
        <groupId>com.github.jikoo</groupId>
        <artifactId>planarwrappers</artifactId>
        <scope>provided</scope>
        <version>2.2.4</version>
      </dependency>
      <dependency>
        <artifactId>discord4j-core</artifactId>
        <groupId>com.discord4j</groupId>
        <scope>provided</scope>
        <version>3.2.2</version>
      </dependency>
      <dependency>
        <artifactId>reflections</artifactId>
        <groupId>org.reflections</groupId>
        <scope>test</scope>
        <version>${reflections.version}</version>
      </dependency>
      <!-- Plugin dependencies -->
      <dependency>
        <artifactId>api</artifactId>
        <groupId>net.luckperms</groupId>
        <scope>provided</scope>
        <version>5.4</version>
      </dependency>
      <dependency>
        <artifactId>CreeperHeal</artifactId>
        <groupId>com.github.nitnelave</groupId>
        <scope>provided</scope>
        <version>f0388aa524</version>
        <exclusions>
          <exclusion>
            <groupId>com.garbagemule.MobArena</groupId>
            <artifactId>MobArena</artifactId>
          </exclusion>
          <exclusion>
            <groupId>com.griefcraft.lwc</groupId>
            <artifactId>LWCPlugin</artifactId>
          </exclusion>
          <exclusion>
            <groupId>com.massivecraft.mcore</groupId>
            <artifactId>MCore</artifactId>
          </exclusion>
          <exclusion>
            <groupId>com.massivecraft.factions</groupId>
            <artifactId>Factions</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <artifactId>worldedit-core</artifactId>
        <groupId>com.sk89q.worldedit</groupId>
        <scope>provided</scope>
        <version>7.2.10</version>
      </dependency>
      <dependency>
        <artifactId>worldguard-bukkit</artifactId>
        <exclusions>
          <exclusion>
            <artifactId>commandbook</artifactId>
            <groupId>com.sk89q</groupId>
          </exclusion>
          <exclusion>
            <artifactId>paper-api</artifactId>
            <groupId>com.destroystokyo.paper</groupId>
          </exclusion>
        </exclusions>
        <groupId>com.sk89q.worldguard</groupId>
        <scope>provided</scope>
        <version>7.0.5</version>
      </dependency>
      <dependency>
        <artifactId>GriefPrevention</artifactId>
        <groupId>com.github.TechFortress</groupId>
        <scope>provided</scope>
        <version>16.18</version>
      </dependency>
      <!-- Tests -->
      <dependency>
        <artifactId>junit</artifactId>
        <groupId>junit</groupId>
        <scope>test</scope>
        <version>4.13.2</version>
      </dependency>
      <!-- Modules -->
      <dependency>
        <artifactId>core</artifactId>
        <groupId>com.easterlyn</groupId>
        <scope>provided</scope>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <artifactId>chat</artifactId>
        <groupId>com.easterlyn</groupId>
        <scope>provided</scope>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <artifactId>captchas</artifactId>
        <groupId>com.easterlyn</groupId>
        <scope>provided</scope>
        <version>${project.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <groupId>com.easterlyn</groupId>
  <modelVersion>4.0.0</modelVersion>

  <modules>
    <module>core</module>
    <module>chat</module> <!-- depends: core -->
    <module>captchas</module> <!-- depends: core -->
    <module>discord</module> <!-- depends: core, chat -->
    <module>effects</module> <!-- depends: core -->
    <module>kitchensink</module> <!-- depends: core, captcha -->
    <module>machines</module> <!-- depends: core, captcha -->
    <module>spectators</module> <!-- depends: core -->
  </modules>

  <packaging>pom</packaging>

  <pluginRepositories>
    <pluginRepository>
      <id>maven-snapshots</id>
      <url>https://repository.apache.org/content/repositories/snapshots/</url>
    </pluginRepository>
  </pluginRepositories>

  <properties>
    <bukkit-api-version>1.19</bukkit-api-version>
    <spigot.version>1.19</spigot.version>
    <spigot.revision>-R0.1-SNAPSHOT</spigot.revision>
    <javassist.version>3.28.0-GA</javassist.version>
    <reflections.version>0.10.2</reflections.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.build.testResourceDirectory>${project.basedir}/test/resources
    </project.build.testResourceDirectory>
    <project.build.testSourceDirectory>${project.basedir}/test/java
    </project.build.testSourceDirectory>
  </properties>

  <repositories>
    <repository>
      <id>md_5</id>
      <url>https://repo.md-5.net/content/groups/public/</url>
    </repository>
    <repository>
      <id>aikar</id>
      <url>https://repo.aikar.co/content/groups/aikar/</url>
    </repository>
    <repository>
      <id>papermc</id>
      <url>https://repo.papermc.io/repository/maven-public/</url>
    </repository>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>sk89q-repo</id>
      <url>https://maven.enginehub.org/repo/</url>
    </repository>
  </repositories>

  <version>2.0</version>

</project>
